--- a/style.css
+++ b/style.css
@@ -1,24 +1,9 @@
 /* style.css */
-body {    
+* {
     margin: 0;
     padding: 0;
-    background-color: #08425f;*/
+    box-sizing: border-box;
 }
-/*
-body {
-    background-image: url("Images/night-sky-milky-way-galaxy_601658-108.jpeg");
-    max-width: 960px;
-    color: #f8f8f8;
-    margin: 0 auto;
-    background-repeat: no-repeat;
-    background-size: cover;
-    display: block;
-    margin: 0 auto;
-    padding: 0;
-    background-position: center;
-    background-attachment: fixed;
-}*/
-
 
 header {
     
@@ -51,11 +36,9 @@ header {
     text-align: left;
     display: flex;
     justify-content: left;
-    margin-left: 20px;            
-    
-    
-    
+    margin-left: 20px;    
 }
+
 .site-subtitle {
     font-family: "Papyrus", cursive, sans-serif;
     font-size: 4em;
@@ -71,16 +54,12 @@ header {
     text-shadow: rgb(0, 242, 255) 1px 0 10px;
     display: flex;
     justify-content: left;
-   
-
-
 }
+
 nav ul {
     list-style-type: none;    
     justify-content: right;
     display: flex;
-    
-
 }
 
 nav ul li {
@@ -94,7 +73,7 @@ nav ul li {
 
 nav a:hover {
     color: #00eaff;
-  }
+}
 
 nav ul li a {
     text-align: right;
@@ -104,12 +83,10 @@ nav ul li a {
     color: #fefefe;    
     font-weight: bold;
     font-family: "Papyrus", cursive, sans-serif;    
-    font-size: 1.75em;    
+    font-size: 1.3em;    
     margin: 0;
     padding: 0;
     display: grid;
-
-
 }
 
 h1 {
@@ -121,7 +98,6 @@ h1 {
     margin-inline-end: 0px;
     font-weight: bolder;
     font-family: "cursive", cursive, sans-serif;
-
 }
 
 h2 {
@@ -142,15 +118,10 @@ h2 {
     font-size: 2.8em;
     text-align: center;
     margin-top: auto;
-    }
+}
 
 main {
-    position: flex;
-    left: 0;
-    right: 0;
-    margin-left: 100px;
-    margin-right: 100px;
-    box-sizing: border-box;           
+  
      
 }
 
@@ -164,33 +135,26 @@ main {
     background-color: #161617;
     color: #00eaff;
     font-weight: bold;           
-    margin-left: 100px;
+    margin-left: 400px;
     margin-right: 100px;       
     margin-top: 100px;
-    margin-bottom: 200px;
-    border: 5px solid #00eaff;
-    border-radius: 25px;
-    position: flex;
-    box-sizing: border-box;
-       
-           
-    
-    
-  }
+    margin-bottom: 100px;
+    border: 5px solid #00eaff;    
+}
 
 .content {
     padding: 20px;
     text-align: center;
-    color: #00eaff;
+    color: #fdfdfd;
+    font-family: 'Courier New', Courier, monospace;        
 }
 
 img {
     padding: 20px;
     text-align: center;
-    color: #00eaff;
+    color: rgb(0, 234, 255);
     margin-left: 50px;
-    margin-right: 50px;
-    
+    margin-right: 50px;    
 }
 
 footer {
@@ -206,6 +170,26 @@ footer {
     left: 0;
     right: 0;
 }
+
+body {
+    background-color: rgb(8, 66, 95);
+
+}
+
+/*
+body {
+    background-image: url("Images/night-sky-milky-way-galaxy_601658-108.jpeg");
+    max-width: 960px;
+    color: #f8f8f8;
+    margin: 0 auto;
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: block;
+    margin: 0 auto;
+    padding: 0;
+    background-position: center;
+    background-attachment: fixed;
+}*/
 
 
 /* Add more styles for your content and layout */
