--- a/style.css
+++ b/style.css
@@ -155,16 +155,28 @@ footer {
     color: #00ff80;
     background-color: #000000;
     box-shadow: 0 -2px 4px -2px black;
-    display: flex;
+    box-sizing: border-box;    
     justify-content: left;
-    align-items: center;
-    height: 64px;
+    text-align: center;
     position: fixed;
     bottom: 0;
     left: 0;
     right: 0;
+    height: 64px;
+    padding: 16px;
 }
 
+.media-link {
+    display: center;
+    margin: 0 10px;
+    height: 64px;
+    padding: 10px;
+
+}
+p {
+    display: flex;
+
+}
 body {
     background-color: rgb(8, 66, 95);
 
